# operator/api/v1alpha1/zz_generated.deepcopy.go
@@ -1354,11 +1354,6 @@ func (in *StorageBackupSpec) DeepCopy() *StorageBackupSpec {
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *StorageBackupStatus) DeepCopyInto(out *StorageBackupStatus) {
 	*out = *in
-	if in.AllowedHosts != nil {
-		in, out := &in.AllowedHosts, &out.AllowedHosts
-		*out = make([]string, len(*in))
-		copy(*out, *in)
-	}
 	if in.CreatedAt != nil {
 		in, out := &in.CreatedAt, &out.CreatedAt
 		*out = (*in).DeepCopy()
